# life123

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  VERSION_NUMBER.txt  bio_sim.py  changelog.txt  environment.yml  jupytext.toml  pyproject.toml  quick.bat  quick_classic_Jupyter_Notebook_not_recommended.bat  quicklab.bat  quickstart.bat  requirements.txt
Life_1D/: bio_sim.py
OBSOLETE_PYTESTS/: test_reactions.py
examples/html_log/: D3_heatmap.css  D3_interactive_star.css  log_D3.py  log_D3_Vue.py  log_basic.py  log_basic2.py  log_basic3.py  log_setup.py  log_using_separate_setup.py  old_logger_from_Valrese.py
experiments/: diagnostics.ipynb  diagnostics.py  get_notebook_info.py  get_notebook_info_alt.py  html_display_test.ipynb  ipynbname3.py
experiments/reactions_single_compartment/: BACKUP_cascade_1.py  (+167 more)
life123/: __init__.py  bio_sim_1d.py  bio_sim_1d_experimental.py  bio_sim_2d.py  chem_data.py  collections.py  diagnostics.py  heuristics.py  history.py  html_log.py  movies.py  numerical.py  random_reactions.py  reaction.py  reaction_dynamics.py  reaction_kinetics.py  reaction_registry.py  reactions.py  species_registry.py  thermodynamics.py  uniform_compartment.py  units.py
life_1D/: bio_sim_1d.py
life_2D/: bio_sim_2d.py
life_3D/: bio_sim_3d.py
src/: __init__.py
tests/: test_biosim.py  test_biosim_1d.py  test_biosim_1d_OLD.py  test_biosim_1d_diffusion.py  test_biosim_1d_diffusion_OLD.py  test_biosim_1d_reactions.py  test_biosim_2d.py  test_biosim_2d_diffusion.py  test_chem_data.py  test_chem_data_experimental.py  test_chemicals.py  test_heuristics.py  test_movies.py  test_numerical.py  test_reaction.py  test_reaction_data.py  test_reaction_dynamics.py  test_reactions.py  test_reactions_extra.py  test_reactions_thermodynamics.py  test_rxn_dynamics.py  test_thermodynamics.py  test_uniform_compartment.py
vue_components/: vue_curves_3_experimental.htm  vue_curves_4.js  vue_curves_4_test.htm  vue_cytoscape_2.js  vue_cytoscape_3.js  vue_cytoscape_5.css  vue_cytoscape_5.js  vue_cytoscape_5_tester.htm  vue_heatmap_11_test.htm
(+384 files in other folders)
