[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life123"
version = "1.0-rc.4"
authors = [
  { name = "Julian West Life123.science" },
]
maintainers = [
  { email = "julian@brainannex.org" },
]
description = "Dynamical Modeling of Biological Systems - Quantitative Reactomics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"neoaccess==4.4.1",
	"numpy~=1.26.4",
	"scipy~=1.13.1",
	"pandas~=1.5.3",
	"plotly~=5.24.1"
]
keywords = [
  "systems biology",
  "dynamical modeling",
  "reactions and diffusion",
  "quantitative reactomics"
]

[project.urls]
Homepage = "https://life123.science"
"Home-page" = "https://life123.science"
"Bug Tracker" = "https://github.com/BrainAnnex/life123/issues"
Source = "https://github.com/BrainAnnex/life123"
Documentation = "https://life123.science"
